# TabPFN

./: pyproject.toml
src/tabpfn/: __init__.py
