[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tabpfn"
version = "2.0.0"
description = "TabPFN: A transformer that solves small tabular classification problems in seconds."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "PriorLabs", email = "contact@priorlabs.ai" },
]
keywords = ["tabular", "classification", "regression", "transformer", "automl", "bayesian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.3.0",
    "pandas>=1.5.0",
    "huggingface_hub>=0.21.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
examples = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/PriorLabs/TabPFN"
Documentation = "https://priorlabs.ai/docs"
Repository = "https://github.com/PriorLabs/TabPFN"
Issues = "https://github.com/PriorLabs/TabPFN/issues"
Changelog = "https://github.com/PriorLabs/TabPFN/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tabpfn"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/tabpfn --cov-report=term-missing"

[tool.coverage.run]
source = ["src/tabpfn"]
omit = ["tests/*"]
